--- a/templates/index.html
+++ b/templates/index.html
@@ -6,60 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Webmoney</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" /> <!-- https://fonts.google.com/ -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet"/>
+    <!-- https://fonts.google.com/ -->
     <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
-     <link rel="stylesheet" href="{{url_for('static', filename='fontawesome/css/all.min.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='fontawesome/css/all.min.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/templatemo-diagoona.css')}}">
-<!--
+    <!--
 
-TemplateMo 550 Diagoona
+    TemplateMo 550 Diagoona
 
-https://templatemo.com/tm-550-diagoona
+    https://templatemo.com/tm-550-diagoona
 
--->
+    -->
 </head>
 
 <body>
-    <div class="tm-container">
-        <div>
-            <div class="tm-row pt-4">
-                <div class="tm-col-left">
-                    <div class="tm-site-header media">
-                        <i class="fas fa-coins fa-3x mt-1 tm-logo"></i>
-                        <div class="media-body">
-                            <h1 class="tm-sitename text-uppercase">Webmoney</h1>
-                            <p class="tm-slogon">Делали Серега и Глеб</p>
-                        </div>
+<div class="tm-container">
+    <div>
+        <div class="tm-row pt-4">
+            <div class="tm-col-left">
+                <div class="tm-site-header media">
+                    <i class="fas fa-coins fa-3x mt-1 tm-logo"></i>
+                    <div class="media-body">
+                        <h1 class="tm-sitename text-uppercase">Webmoney</h1>
+                        <p class="tm-slogon">Делали Серега и Глеб</p>
                     </div>
                 </div>
-                <div class="tm-col-right">
-                    <nav class="navbar navbar-expand-lg" id="tm-main-nav">
-                        <button class="navbar-toggler toggler-example mr-0 ml-auto" type="button"
+            </div>
+            <div class="tm-col-right">
+                <nav class="navbar navbar-expand-lg" id="tm-main-nav">
+                    <button class="navbar-toggler toggler-example mr-0 ml-auto" type="button"
                             data-toggle="collapse" data-target="#navbar-nav"
                             aria-controls="navbar-nav" aria-expanded="false" aria-label="Toggle navigation">
-                            <span><i class="fas fa-bars"></i></span>
-                        </button>
-                        <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
-                            <ul class="navbar-nav text-uppercase">
-                                <li class="nav-item active">
-                                    <a class="nav-link tm-nav-link" href="">Home <span class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="/reg">MY CABINET</a>
-                                </li>
+                        <span><i class="fas fa-bars"></i></span>
+                    </button>
+                    <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
+                        <ul class="navbar-nav text-uppercase">
+                            <li class="nav-item active">
+                                <a class="nav-link tm-nav-link" href="">Home <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link tm-nav-link" href="pages/profile/{{login}}">MY CABINET</a>
+                            </li>
 
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="contact.html">LOG IN</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
+                            <li class="nav-item">
+                                <a class="nav-link tm-nav-link" href="auth/login">LOG IN</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
+        </div>
 
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6 mx-auto">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 mx-auto">
 
 
                     <section class="tm-content">
@@ -67,19 +68,15 @@ https://templatemo.com/tm-550-diagoona
                         <p class="mb-5">описание описание описание описание </p>
                         <hr class="mb-5">
                         <p class="mb-5">чтобы иметь доступ к своему счету надо зайти или зарегать аккаунт</p>
-                        <a href="/reg" class="btn btn-primary">Регистрация</a>
+                        <a href="auth/signup" class="btn btn-primary">Регистрация</a>
                     </section>
-                    </div>
                 </div>
             </div>
+        </div>
 
 
+    </div>
 
-
-
-
-
-
-
+</div>
 </body>
 </html>
