--- a/templates/personal-cabinet.html
+++ b/templates/personal-cabinet.html
@@ -1,56 +1,25 @@
-<!doctype html>
-<html lang="en">
-  <head>
-  	<title>Website menu 09</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet"/>
+    <!-- https://fonts.google.com/ -->
+    <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='fontawesome/css/all.min.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/templatemo-diagoona.css')}}">
+</head>
+<body>
+<div class="tm-container">
+<div>
+        <div class="tm-row pt-4">
+            <div class="tm-col-left">
+                <div class="tm-site-header media">
+                  <a href="/"><i class="fas fa-coins fa-3x mt-1 tm-logo"></i> </a>
+                    <div class="media-body">
+                        <h1 class="tm-sitename text-uppercase">Webmoney</h1>
 
-	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
+                    </div>
+                </div>
+            </div>
+        </div>
+ </div>
+</div>
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	
-	<link rel="stylesheet" href="{{url_for('static', filename='css/templatemo-diagoona.css')}}">
-	<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
-
-	</head>
-	<body>
-	<div id="colorlib-page">
-		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
-		<aside id="colorlib-aside" role="complementary" class="js-fullheight">
-			<nav id="colorlib-main-menu" role="navigation">
-				<ul>
-					<li class="colorlib-active"><a href="#">Home</a></li>
-					<li><a href="#">Project</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Services</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
-			</nav>
-		</aside> <!-- END COLORLIB-ASIDE -->
-
-		<div id="colorlib-main">
-			<section class="ftco-section pt-4 mb-5 ftco-intro">
-				<div class="container-fluid px-3 px-md-0">
-					<div class="row">
-						<p>тут вкладки</p>
-					</div>
-				</div>
-			</section>
-		</div><!-- END COLORLIB-MAIN -->
-	</div><!-- END COLORLIB-PAGE -->
-
-	</section>
-
-
-	<script src="{{url_for('static', filename='js/jquery.min.js')}}" ></script>
-	<script src="{{url_for('static', filename='js/popper.js')}}" ></script>
-	<script src="{{url_for('static', filename='js/main.js')}}" ></script>
-	<script src="{{url_for('static', filename='js/bootstrap.min1.js')}}" ></script>
-	<script src="{{url_for('static', filename='jjs/main.js')}}" ></script>
-
-
-
-	</body>
-</html>
-
+</body>
