--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
         <div class="tm-row pt-4">
             <div class="tm-col-left">
                 <div class="tm-site-header media">
-                    <i class="fas fa-coins fa-3x mt-1 tm-logo"></i>
+                    <a href="/"><i class="fas fa-coins fa-3x mt-1 tm-logo"></i> </a>
                     <div class="media-body">
                         <h1 class="tm-sitename text-uppercase">Webmoney</h1>
                         <p class="tm-slogon">Делали Серега и Глеб</p>
