--- a/static/css/templatemo-diagoona.css
+++ b/static/css/templatemo-diagoona.css
@@ -131,13 +131,48 @@ p { line-height: 1.9; }
     padding-left: 70px;
     padding-right: 70px;
 }
+.tm-col-center {
+    width: 100%;
+    height: 100%;
+    padding-left: 600px;
+    padding-right: 600px;
+}
+.tm-col-center-name {
+    width: 100%;
+    height: 100%;
+    padding-left: 625px;
+    padding-right: 575px;
+}
 
+.tm-col-center-form {
+    width: 100%;
+    height: 100%;
+    padding-left: 600px;
+    padding-right: 600px;
+    padding-top:100px;
+}
+.tm-col-center-form1 {
+    width: 300%;
+    height: 50%;
+    padding-left: 20px;
+    padding-right:450px;
+    padding-top:100px;
+}
+.tm-col-home1 {
+    width: 100%;
+    height: 100%;
+    padding-left: 600px;
+    padding-right: 100px;
+}
 .tm-content {
     max-width: 660px;
     margin-top: 50px;
     padding-right: 20px;
 }
-
+button{
+margin:10px;
+width:150px;
+}
 .tm-about { max-width: 525px; }
 
 ::-webkit-scrollbar {
