--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="column is-4 is-offset-4">
-    <h3 class="title">Sign Up</h3>
+<div style="padding: 210px;">
+<div style="text-align:center">
+    <h3 style="font-size:42px;" class="title">SIGN UP</h3>
     <div class="box">
         {% with messages = get_flashed_messages() %}
             {% if  messages %}
@@ -14,18 +15,20 @@
         <form method="POST" action="signup">
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="text" name="name" placeholder="Name" autofocus="">
+                    <input style="font-size:32px;" class="input is-large" type="text" name="name" placeholder="Имя" autofocus="">
                 </div>
             </div>
-
+<p></p>
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="password" name="password" placeholder="Password">
+                    <input  style="font-size:32px;" class="input is-large" type="password" name="password" placeholder="Пароль">
                 </div>
             </div>
 
-            <button class="button is-block is-info is-large is-fullwidth">Sign Up</button>
+             <button class="button is-block is-info is-large is-fullwidth" style="width: 175px;">Зарегистрироваться</button>
         </form>
     </div>
 </div>
+</div>
+
 {% endblock %}
